--- a/GUMS/Components/Pages/Meetings/AddExtraMeeting.razor
+++ b/GUMS/Components/Pages/Meetings/AddExtraMeeting.razor
@@ -141,9 +141,10 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-md-2 text-end">
-                                                    <button type="button" class="btn btn-sm btn-outline-danger"
-                                                            @onclick="() => RemoveActivity(index)">
-                                                        <i class="bi bi-trash"></i>
+                                                    <button type="button" class="btn btn-outline-danger"
+                                                            @onclick="() => RemoveActivity(index)"
+                                                            title="Remove activity">
+                                                        <i class="bi bi-x-lg"></i> Remove
                                                     </button>
                                                 </div>
                                             </div>
