--- a/GUMS/Components/Shared/EmergencyContactEditor.razor
+++ b/GUMS/Components/Shared/EmergencyContactEditor.razor
@@ -21,7 +21,7 @@
                     <div class="d-flex justify-content-between align-items-start mb-3">
                         <h6 class="card-title mb-0">Contact @(Contacts.IndexOf(contact) + 1)</h6>
                         <button type="button" class="btn btn-sm btn-outline-danger" @onclick="() => RemoveContact(contact)">
-                            <i class="bi bi-trash"></i> Remove
+                            <i class="bi bi-x-lg"></i> Remove
                         </button>
                     </div>
 
