--- a/GUMS/Components/Pages/Meetings/Index.razor
+++ b/GUMS/Components/Pages/Meetings/Index.razor
@@ -157,8 +157,9 @@
                                             <div class="btn-group btn-group-sm" role="group">
                                                 <a href="/Meetings/View/@meeting.Id" class="btn btn-outline-primary">View</a>
                                                 <a href="/Meetings/Edit/@meeting.Id" class="btn btn-outline-secondary">Edit</a>
-                                                <button class="btn btn-outline-danger" @onclick="() => ShowDeleteConfirm(meeting)">
-                                                    <i class="bi bi-trash"></i>
+                                                <button class="btn btn-outline-danger" @onclick="() => ShowDeleteConfirm(meeting)"
+                                                        title="Delete meeting">
+                                                    <i class="bi bi-trash"></i> Delete
                                                 </button>
                                             </div>
                                         </td>
@@ -243,8 +244,9 @@
                                             <td>
                                                 <div class="btn-group btn-group-sm" role="group">
                                                     <a href="/Meetings/View/@meeting.Id" class="btn btn-outline-primary">View</a>
-                                                    <button class="btn btn-outline-danger" @onclick="() => ShowDeleteConfirm(meeting)">
-                                                        <i class="bi bi-trash"></i>
+                                                    <button class="btn btn-outline-danger" @onclick="() => ShowDeleteConfirm(meeting)"
+                                                            title="Delete meeting">
+                                                        <i class="bi bi-trash"></i> Delete
                                                     </button>
                                                 </div>
                                             </td>
