--- a/GUMS/Components/Layout/NavMenu.razor
+++ b/GUMS/Components/Layout/NavMenu.razor
@@ -13,7 +13,7 @@
 <div class="nav-scrollable" onclick="if(event.target.closest('a.nav-link')) document.querySelector('.navbar-toggler').click()">
     <nav class="nav flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All" >
                 <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
             </NavLink>
         </div>
@@ -44,6 +44,12 @@
                     </NavLink>
                     <NavLink class="nav-link nav-link-sub" href="Accounts">
                         <span class="bi bi-wallet2" aria-hidden="true"></span> Accounts
+                    </NavLink>
+                    <NavLink class="nav-link nav-link-sub" href="Accounts/Expenses">
+                        <span class="bi bi-receipt" aria-hidden="true"></span> Expenses
+                    </NavLink>
+                    <NavLink class="nav-link nav-link-sub" href="Accounts/Claims">
+                        <span class="bi bi-file-earmark-text" aria-hidden="true"></span> Claims
                     </NavLink>
                 </div>
             }
